[gd_scene load_steps=7 format=3 uid="uid://by5q3f2iqsjfo"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_xdtnk"]
[ext_resource type="Texture2D" uid="uid://odgg7my7vrw5" path="res://assets/UI/GUI-5.png" id="1_y7ogp"]
[ext_resource type="FontFile" uid="uid://b351cgw4dfieu" path="res://assets/UI/Quirky PC.ttf" id="2_bojph"]
[ext_resource type="Texture2D" uid="uid://cektoddcrfq03" path="res://assets/UI/GUI-5 2.png" id="3_a4w03"]
[ext_resource type="Texture2D" uid="uid://cp6afrfa3moj1" path="res://assets/UI/text_background.png" id="3_h7bub"]
[ext_resource type="Texture2D" uid="uid://bytmkoet5to54" path="res://assets/UI/GUI-5 1.png" id="4_2xi4p"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xdtnk")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.0
offset_top = -30.0
offset_right = 140.0
offset_bottom = 269.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16
alignment = 1

[node name="StartButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("1_y7ogp")
texture_pressed = ExtResource("3_a4w03")
texture_hover = ExtResource("4_2xi4p")
stretch_mode = 0

[node name="Label" type="Label" parent="VBoxContainer/StartButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.5
offset_top = -14.5
offset_right = 65.5
offset_bottom = 8.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_bojph")
theme_override_font_sizes/font_size = 24
text = "start"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionsButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("1_y7ogp")
texture_pressed = ExtResource("3_a4w03")
texture_hover = ExtResource("4_2xi4p")
stretch_mode = 0

[node name="Label" type="Label" parent="VBoxContainer/OptionsButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.5
offset_top = -14.5
offset_right = 88.5
offset_bottom = 8.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_bojph")
theme_override_font_sizes/font_size = 24
text = "controls"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuitButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("1_y7ogp")
texture_pressed = ExtResource("3_a4w03")
texture_hover = ExtResource("4_2xi4p")
stretch_mode = 0

[node name="Label" type="Label" parent="VBoxContainer/QuitButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.5
offset_top = -14.5
offset_right = 53.5
offset_bottom = 8.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_bojph")
theme_override_font_sizes/font_size = 24
text = "quit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(584, 293)
scale = Vector2(17.1648, 28.9091)
texture = ExtResource("3_h7bub")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 266.0
offset_top = 111.0
offset_right = 919.0
offset_bottom = 254.0
theme_override_constants/line_spacing = 22
theme_override_fonts/font = ExtResource("2_bojph")
theme_override_font_sizes/font_size = 64
text = "no hero no problem
"
horizontal_alignment = 1
autowrap_mode = 2

[connection signal="mouse_entered" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_mouse_entered"]
